--- a/sites/all/themes/corporate_agency/css/grid.css
+++ b/sites/all/themes/corporate_agency/css/grid.css
@@ -17,16 +17,19 @@ Increase this if your layout is wider.
 Note: IE6 works fine without this fix.
 */
 body {
-        min-width: 960px;
+    min-width: 960px;
 }
 
 /* =Containers
 --------------------------------------------------------------------------------*/
 .container_12
 {
-        margin-left: auto;
-        margin-right: auto;
-        width: 960px;
+    /*        margin-left: auto;
+            margin-right: auto;
+            width: 960px;*/
+    width: 30%;
+    float: left;
+    margin: 0px 21px;
 }
 
 /* =Grid >> Global
@@ -43,10 +46,10 @@ body {
 .grid_10,
 .grid_11,
 .grid_12 {
-        display: inline;
-        float: left;
-        margin-left: 10px;
-        margin-right: 10px;
+    display: inline;
+    float: left;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .push_1, .pull_1,
@@ -60,7 +63,7 @@ body {
 .push_9, .pull_9,
 .push_10, .pull_10,
 .push_11, .pull_11 {
-        position: relative;
+    position: relative;
 }
 
 /* =Grid >> Children (Alpha ~ First, Omega ~ Last)
@@ -143,31 +146,31 @@ body {
 ----------------------------------------------------------------------------------------------------*/
 /* http://sonspring.com/journal/clearing-floats */
 .clear {
-        clear: both;
-        display: block;
-        overflow: hidden;
-        visibility: hidden;
-        width: 0;
-        height: 0;
+    clear: both;
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0;
 }
 
 /* http://www.yuiblog.com/blog/2010/09/27/clearfix-reloaded-overflowhidden-demystified */
 .clearfix:before,
 .clearfix:after {
-        content: "\0020";
-        display: block;
-        overflow: hidden;
-        visibility: hidden;
-        width: 0;
-        height: 0;
+    content: "\0020";
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0;
 }
 .clearfix:after {
-        clear: both;
+    clear: both;
 }
 /*
 The following zoom:1 rule is specifically for IE6 + IE7.
 Move to separate stylesheet if invalid CSS is a problem.
 */
 .clearfix {
-        zoom: 1;
+    zoom: 1;
 }
