--- a/sites/all/themes/corporate_agency/css/senpre.css
+++ b/sites/all/themes/corporate_agency/css/senpre.css
@@ -41,3 +41,7 @@ and open the template in the editor.
     width: 100%;
     height: 500px;
 }
+.flexslider{
+    width:92%;
+    margin: 0 auto;
+}
