--- a/sites/all/themes/corporate_agency/css/senpre.css
+++ b/sites/all/themes/corporate_agency/css/senpre.css
@@ -39,9 +39,11 @@ and open the template in the editor.
 }
 .flexslider .slides li img{
     width: 100%;
-    height: 500px;
+    height: 565px;
 }
 .flexslider{
-    width:92%;
+    width: 100%;
     margin: 0 auto;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
